--- a/Duality.gg/Base.lproj/Main.storyboard
+++ b/Duality.gg/Base.lproj/Main.storyboard
@@ -91,6 +91,57 @@
             </objects>
             <point key="canvasLocation" x="3429" y="961"/>
         </scene>
+        <!--Nosotros-->
+        <scene sceneID="eug-BR-aiE">
+            <objects>
+                <viewController title="Nosotros" id="i0F-U2-7Pl" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="daa-Xa-bJf">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Tecnológico de Monterrey Campus CSF y CCM " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cWH-gi-dlm">
+                                <rect key="frame" x="20" y="258" width="362" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="secondarySystemBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Proyectos de desarrollo para dispositivos móviles (Gpo 1) 7mo semestre" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hgn-kI-kCz">
+                                <rect key="frame" x="20" y="278" width="362" height="179"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="secondarySystemBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="5" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3DS-Xj-WgI">
+                                <rect key="frame" x="20" y="424" width="362" height="143"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <string key="text">Fracisco Acuña  CSF A01027294Maximiliano Sapién  CSF A01027541Manuel Herrasti CCM A01657028 Patricio Tena CSF A01027293                                         Maestro Dr. José Martín Molina Espinosa</string>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <color key="textColor" systemColor="secondarySystemBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="red_rectangle.png" translatesAutoresizingMaskIntoConstraints="NO" id="azc-UP-97D">
+                                <rect key="frame" x="0.0" y="13" width="414" height="157"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            </imageView>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Nosotros" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="W69-HQ-JmD">
+                                <rect key="frame" x="27" y="73" width="122" height="37"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="31"/>
+                                <color key="textColor" systemColor="secondarySystemBackgroundColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="Aoc-Fp-YcV"/>
+                        <color key="backgroundColor" red="0.08235294118" green="0.10980392160000001" blue="0.1450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Nosotros" image="person.3.fill" catalog="system" id="OqL-kE-DCW"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="McY-ck-jxh" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="898.55072463768124" y="-567.1875"/>
+        </scene>
         <!--Leaderbord-->
         <scene sceneID="ggV-RD-sZJ">
             <objects>
@@ -99,14 +150,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leaderboard.png" translatesAutoresizingMaskIntoConstraints="NO" id="oNq-Vg-AMA">
-                                <rect key="frame" x="-8.5" y="6" width="431" height="212"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="oNq-Vg-AMA" secondAttribute="height" multiplier="431:212" id="6pD-VR-MfR"/>
-                                    <constraint firstAttribute="height" constant="212" id="bht-o1-rfr"/>
-                                    <constraint firstAttribute="width" constant="431" id="m8k-Xx-EbD"/>
-                                </constraints>
-                            </imageView>
                             <containerView opaque="NO" contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="2S1-Pn-Qyr">
                                 <rect key="frame" x="29" y="185" width="356" height="526"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
@@ -114,6 +157,16 @@
                                     <segue destination="Tcf-4y-nn8" kind="embed" id="UHL-MJ-2f2"/>
                                 </connections>
                             </containerView>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Leaderboard.png" translatesAutoresizingMaskIntoConstraints="NO" id="oNq-Vg-AMA">
+                                <rect key="frame" x="-8.5" y="6" width="431" height="212"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" secondItem="oNq-Vg-AMA" secondAttribute="height" multiplier="431:212" id="6pD-VR-MfR"/>
+                                    <constraint firstAttribute="height" constant="212" id="bht-o1-rfr"/>
+                                    <constraint firstAttribute="width" constant="431" id="m8k-Xx-EbD"/>
+                                    <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="212" id="wDv-KY-G9g"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="431" id="zvW-jp-0Fa"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="SFb-FK-R7Q"/>
                         <color key="backgroundColor" red="0.08235294118" green="0.10980392160000001" blue="0.1450980392" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
@@ -539,6 +592,7 @@
                         <segue destination="1ew-Cb-Gdt" kind="relationship" relationship="viewControllers" id="fGd-Ph-AGh"/>
                         <segue destination="j2X-Xm-uVF" kind="relationship" relationship="viewControllers" id="y6p-nb-EXP"/>
                         <segue destination="Deu-67-dc1" kind="relationship" relationship="viewControllers" id="RTD-n6-oyw"/>
+                        <segue destination="i0F-U2-7Pl" kind="relationship" relationship="viewControllers" id="ohe-wf-mg6"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="STM-Ni-sdi" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -722,10 +776,14 @@
         <image name="Victory_green.png" width="49" height="174"/>
         <image name="battlep.png" width="900" height="290"/>
         <image name="magnifyingglass" catalog="system" width="128" height="115"/>
+        <image name="person.3.fill" catalog="system" width="128" height="61"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="profile_bg.png" width="1125" height="2436"/>
         <image name="red_rectangle.png" width="1122" height="282"/>
         <image name="textformat.123" catalog="system" width="128" height="62"/>
+        <systemColor name="secondarySystemBackgroundColor">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
